//
syntax = "proto3";
package khepri.horus;

option go_package = "khepri.dev/horus/pb";

//
enum IdentityKind {
	IDENTITY_KIND_UNSPECIFIED = 0; //
	IDENTITY_KIND_MAIL        = 1; //
}

// Member role for organization.
enum RoleOrg {
	ROLE_ORG_UNSPECIFIED = 0;  //
	ROLE_ORG_OWNER       = 10; //
	ROLE_ORG_MEMBER      = 20; //
}

// Member role for organization.
enum RoleTeam {
	ROLE_TEAM_UNSPECIFIED = 0;  //
	ROLE_TEAM_OWNER       = 10; //
	ROLE_TEAM_MEMBER      = 20; //
}

message Status {
	string user_alias = 1; // Alias of user ID.

	string session_expired_at = 3; //
}

//
message Identity {
	IdentityKind kind  = 1; //
	string       value = 2; //

	string verified_by = 3; //
}

message Org {
	bytes  id   = 1; // Unique ID.
	string name = 2; // Display name; it is not unique.
}
