//
syntax = "proto3";
package khepri.horus;

import "common.proto";

option go_package = "khepri.dev/horus/pb";

//
service Horus {
	//
	rpc Status(StatusReq) returns (StatusRes) {};
}

message StatusReq {}
message StatusRes {
	string user_alias = 1; //

	string session_expired_at = 3; //
}
